tolk-tester/tests/invalid-syntax/err-3429.tolk
fun main() {
    var x = array [];
}

/**
@compilation_should_fail
@stderr type `array<T>` is generic, you should provide type arguments
@stderr ^^^^^
 */
